--- a/index.html
+++ b/index.html
@@ -5,14 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <script src="./javascript.js"></script> -->
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>Rock-scissors-paper-game</title>
 </head>
 <body>
-    <div id="options">
+    <div id="title">
+        <div><img src="./img/title.png" alt="rock scissors paper title" class="img"></div>
+    </div>
+    <div id="container">
         <div>Chose one option</div>
-        <button id="rock">Rock</button>
-        <button id="scissors">Scissors</button>
-        <button id="paper">Paper</button>
+        <div id="options">
+            <button id="rock" class="button"><img src="./img/rock.png" alt="rock" id="rock"></button>
+            <button id="scissors" class="button"><img src="./img/scissors.png" alt="scissors" id="scissors"></button>
+            <button id="paper" class="button"><img src="./img/paper.png" alt="paper" id="paper"></button>
+        </div>
     </div>
     <script src="./script.js"></script>
 </body>
