Update UI and some functions

--- a/index.html
+++ b/index.html
@@ -17,12 +17,7 @@
         <h1 class="paper">PAPER</h1>
     </div>
     <div id="container">
-        <div>Chose one option</div>
-        <div id="options">
-            <button id="rock" class="button"><i id="rock" class="fa-solid fa-hand-back-fist fa-7x"></i></button>
-            <button id="scissors" class="button"><i id="scissors" class="fa-solid fa-hand-scissors fa-7x"></i></button>
-            <button id="paper" class="button"><i id="paper" class="fa-solid fa-hand fa-7x"></i></button>
-        </div>
+        <button id="playGame">PLAY GAME</button>
     </div>
     <script src="./script.js"></script>
 </body>
